Gộp Long Lực Nam Mạnh

--- a/src/main/resources/templates/WebKhachHang/thanh-toan.html
+++ b/src/main/resources/templates/WebKhachHang/thanh-toan.html
@@ -67,7 +67,7 @@
                     </div>
                     <div>
                         <label for="address" class="block text-sm font-medium text-gray-700 mb-1">Địa chỉ nhận hàng</label>
-                        <input type="text" id="address" name="address" class="form-control w-full" th:value="${loggedInUser?.diaChi}" required/>
+                        <input type="text" id="address" name="address" class="form-control w-full" th:value="${loggedInUser?.chiTietDiaChi}" required/>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4 mt-4">
                         <select id="province" class="form-control" required>
